k8s/demoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demoapp
spec:
  selector:
    app: demoapp
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
